[gd_scene load_steps=6 format=3 uid="uid://ck234b7mscmrn"]

[ext_resource type="Texture2D" uid="uid://0ujo5olp3s25" path="res://img/slots/slots.png" id="1_oebtt"]
[ext_resource type="Script" uid="uid://b1r15orpmjjdd" path="res://script/slot_machine.gd" id="1_vdvju"]
[ext_resource type="Texture2D" uid="uid://dk4c43vvjcjhn" path="res://img/slots/slots_white_bg.png" id="2_vdvju"]
[ext_resource type="Texture2D" uid="uid://rxlpd65q3trl" path="res://img/slots/symbols/carrot_seed.png" id="4_om1wn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgo26"]
size = Vector2(112, 44)

[node name="SlotMachine" type="Area2D"]
script = ExtResource("1_vdvju")

[node name="white_bg" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_vdvju")

[node name="slots_bg" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_oebtt")

[node name="slot_symbols" type="Node2D" parent="."]

[node name="slot_1" type="Sprite2D" parent="slot_symbols"]
position = Vector2(-34, 0)
scale = Vector2(2, 2)
texture = ExtResource("4_om1wn")

[node name="slot_2" type="Sprite2D" parent="slot_symbols"]
scale = Vector2(2, 2)
texture = ExtResource("4_om1wn")

[node name="slot_3" type="Sprite2D" parent="slot_symbols"]
position = Vector2(34, 0)
scale = Vector2(2, 2)
texture = ExtResource("4_om1wn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cgo26")

[node name="SpinTimer" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_spin_timer_timeout"]
